--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tippyjs/react": "^4.2.6",
     "bootstrap": "^5.2.2",
     "firebase": "^9.12.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
